# Hybrid-decentralized-AML-framework-integrating-ML-authority-with-Blockchain

./: .env.example  .gitignore  .golangci.yml  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  go.mod  go.work  pyproject.toml  worklog.md
blockchain/chaincode/alert-contract/: contract.go  contract_test.go  go.mod  main.go
blockchain/chaincode/audit-contract/: contract.go  contract_test.go  go.mod  go.sum  main.go
blockchain/chaincode/kyc-contract/: contract.go  contract_test.go  go.mod  main.go
blockchain/network/: README.md  configtx.yaml  cryptogen.yaml  deploy-chaincode.sh  docker-compose.peers.yaml  docker-compose.yaml  setOrgEnv.sh  start.sh  teardown.sh
blockchain/network/connection-profiles/: org1.yaml  org2.yaml  org3.yaml
infra/: docker-compose.yml
infrastructure/docker/: test-runner.Dockerfile
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/prometheus/rules/: fraud-detection-alerts.yml
ml/data/: __init__.py  preprocessor.py
ml/evaluation/: __init__.py  evaluator.py
ml/explainability/: __init__.py  counterfactual.py  lime_explainer.py  shap_explainer.py
ml/features/: __init__.py  engineering.py
ml/federated/: __init__.py  federated_stub.py
ml/models/: autoencoder.py  base.py  ensemble.py  gnn_model.py  lightgbm_model.py  random_forest.py  xgboost_model.py
proto/: alert.proto  audit.proto  common.proto  encryption.proto  fraud.proto  iam.proto  kyc.proto  transaction.proto
scripts/: proto-gen.sh  run-all.sh  seed-data.sh  setup.sh
scripts/db/: mongo-init.js  postgres-init.sql
scripts/db/migrations/: 001_kyc_schema.sql
scripts/vault/: vault-init.sh
services/alert-service/: Dockerfile  go.mod
services/alert-service/cmd/server/: main.go
services/alert-service/internal/config/: config.go
services/alert-service/internal/domain/: alert.go
services/alert-service/internal/escalation/: scheduler.go
services/alert-service/internal/grpc/: handler.go  server.go
services/alert-service/internal/http/: handler.go  server.go
services/alert-service/internal/kafka/: consumer.go
services/alert-service/internal/notification/: dispatcher.go  email.go  slack.go  sms.go  webhook.go
services/alert-service/internal/service/: alert_service.go  alert_service_test.go
services/alert-service/internal/websocket/: handler.go  hub.go
services/analytics-service/: go.mod
services/api-gateway/: Dockerfile  go.mod
services/api-gateway/cmd/server/: main.go
services/api-gateway/internal/config/: config.go
services/api-gateway/internal/health/: handler.go
services/api-gateway/internal/metrics/: metrics.go
services/api-gateway/internal/middleware/: auth.go  chain.go  cors.go  logging.go  ratelimit.go  (+4 more)
services/blockchain-service/: README.md  go.mod  go.sum
services/case-service/: Dockerfile  go.mod
services/encryption-service/: Dockerfile  README.md  go.mod
services/iam-service/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum
services/iam-service/cmd/: main.go
services/iam-service/config/: config.go
services/iam-service/database/: postgres.go
services/iam-service/grpc/: server.go
services/iam-service/handlers/: auth_handler.go  middleware.go  secure_handler.go
services/iam-service/middleware/: auth_middleware.go  security_middleware.go
services/iam-service/migrations/: 001_create_schema.sql  002_create_tables.sql  003_create_indexes.sql  004_seed_data.sql  migrate.go
services/iam-service/models/: user.go
services/iam-service/proto/: iam.proto
services/iam-service/repositories/: audit_repo.go  permission_repo.go  session_repo.go  user_repo.go
services/iam-service/services/: auth_service.go
services/iam-service/utils/: hash.go  jwt.go  password.go
services/kyc-service/: Dockerfile  README.md  go.mod  go.sum
services/ml-service/: main.py  pyproject.toml
services/ml-service/app/api/: routes.py
services/ml-service/app/core/: config.py  logging.py
services/ml-service/app/features/: __init__.py  pipeline.py
services/ml-service/app/grpc/: __init__.py  interceptors.py  server.py  servicer.py
services/ml-service/app/models/: registry.py
services/ml-service/app/schemas/: prediction.py
services/ml-service/tests/unit/: test_feature_pipeline.py  test_grpc_interceptors.py  test_grpc_servicer.py  test_model_registry.py
services/transaction-service/: Dockerfile  README.md  go.mod
shared/go/: go.mod  go.sum
shared/go/grpcclient/: client.go
shared/go/logger/: logger.go
shared/go/middleware/: grpc_interceptors.go  grpc_interceptors.go.3450233078586737155  grpc_interceptors_test.go
shared/go/tracing/: tracing.go
(+90 files in other folders)
