[tool.poetry]
name = "fraud-detection-ml"
version = "1.0.0"
description = "ML models and pipeline for Blockchain-Based KYC/AML Fraud Detection System"
authors = ["Fraud Detection Team <team@frauddetection.local>"]
readme = "ml/README.md"
packages = [
    { include = "ml" },
]

[tool.poetry.dependencies]
python = "^3.11"

# --- Core ML ---
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"
xgboost = "^2.0"
lightgbm = "^4.3"
imbalanced-learn = "^0.12"   # SMOTE
optuna = "^3.6"              # hyperparameter tuning

# --- Deep Learning / GNN ---
torch = "^2.2"
torch-geometric = "^2.5"     # PyTorch Geometric for GNN

# --- Explainability ---
shap = "^0.45"
lime = "^0.2"

# --- API / gRPC ---
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
grpcio = "^1.63"
grpcio-tools = "^1.63"
grpcio-health-checking = "^1.63"
protobuf = "^4.25"
pydantic = "^2.7"
pydantic-settings = "^2.2"

# --- MLflow ---
mlflow = "^2.13"

# --- Data Processing ---
pyarrow = "^16.0"
networkx = "^3.3"            # graph construction from Elliptic edges

# --- Federated Learning ---
tensorflow-federated = {version = "^0.86", optional = true}

# --- Logging / Observability ---
structlog = "^24.1"
opentelemetry-api = "^1.24"
opentelemetry-sdk = "^1.24"
opentelemetry-exporter-jaeger = "^1.20"
opentelemetry-instrumentation-fastapi = "^0.45b0"

# --- HTTP client ---
httpx = "^0.27"

# --- Utilities ---
python-dotenv = "^1.0"
click = "^8.1"
tqdm = "^4.66"
scipy = "^1.13"
matplotlib = "^3.9"
seaborn = "^0.13"

[tool.poetry.extras]
federated = ["tensorflow-federated"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
black = "^24.4"
flake8 = "^7.0"
mypy = "^1.10"
isort = "^5.13"
pre-commit = "^3.7"
faker = "^25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configs ---
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "ml"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=ml --cov-report=term-missing --cov-report=html:coverage --cov-fail-under=80"

[tool.coverage.run]
source = ["ml"]
omit = ["*/test*", "*/__pycache__/*", "*/proto/gen/*"]
